join button set up

--- a/pages/scoreboard.html
+++ b/pages/scoreboard.html
@@ -42,11 +42,39 @@
         >
           <a
             href="/pages/leagues.html"
-            class="md:w-55 w-full text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
+            class="md:w-55 text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
             >Draft<i
               class="fi fi-br-crown pt-1 md:text-2xl text-sm text-palepink rotate-30"
             ></i
           ></a>
+          <!--mobile notifications (dropdown) -->
+          <div class="ml-auto mr-3 md:hidden">
+            <details id="mobileNoteBtn" class="dropdown dropdown-end">
+              <summary
+                class="btn btn-ghost rounded-full hover:bg-transparent hover:shadow-none text-white aspect-square size-9 flex items-center justify-center border-lightgray-border border-1 relative"
+              >
+                <i class="fi fi-sr-bell pt-1"></i>
+                <span
+                  id="mobileNotesBadge"
+                  class="absolute bg-palepink rounded-full min-w-4 h-4 px-1 flex items-center justify-center text-[10px] -top-1 -right-1 hidden"
+                ></span>
+              </summary>
+              <div
+                class="menu dropdown-content z-10 shadow-sm w-72 p-3 bg-lightgray rounded-xl mt-2 text-white space-y-1 font-semibold"
+              >
+                <div class="text-xs text-neutral-300 px-1 pb-1">
+                  Notifications
+                </div>
+                <ul id="mobileNotesList" class="space-y-1">
+                  <li
+                    class="text-xs text-neutral-400 px-2 py-2 rounded-lg bg-[rgba(255,255,255,0.04)]"
+                  >
+                    No notifications
+                  </li>
+                </ul>
+              </div>
+            </details>
+          </div>
           <!--mobile menu-->
           <details class="dropdown dropdown-end">
             <summary
@@ -78,7 +106,32 @@
                 <input type="text" placeholder="Search..." />
               </label>
             </div>
-            <div class="flex gap-8">
+            <div class="flex gap-4">
+              <details id="webNoteBtn" class="dropdown dropdown-end">
+                <summary
+                  class="btn btn-circle btn-ghost size-8 text-white border-1 border-lightgray-border relative"
+                >
+                  <i class="fi fi-sr-bell pt-1"></i>
+                  <span
+                    id="webNotesBadge"
+                    class="absolute -top-1 -right-1 bg-neutral-900 text-white rounded-full min-w-4 h-4 px-1 flex items-center justify-center text-[10px] hidden"
+                  ></span>
+                </summary>
+                <div
+                  class="menu dropdown-content z-10 shadow-sm w-80 p-3 bg-white text-neutral-900 rounded-xl mt-2 space-y-1 font-semibold"
+                >
+                  <div class="text-xs text-neutral-500 px-1 pb-1">
+                    Notifications
+                  </div>
+                  <ul id="webNotesList" class="space-y-1">
+                    <li
+                      class="text-xs text-neutral-500 px-2 py-2 rounded-lg bg-neutral-50"
+                    >
+                      No notifications
+                    </li>
+                  </ul>
+                </div>
+              </details>
               <a
                 class="btn btn-circle btn-ghost size-8 text-white border-1 border-lightgray-border"
                 ><i class="fi fi-sr-bell pt-1"></i
@@ -300,6 +353,258 @@
         </div>
       </div>
     </div>
+    <script>
+      let supabaseClient = null;
+
+      async function loadSupabase() {
+        if (supabaseClient) return supabaseClient;
+        const res = await fetch("/supabase.txt", { cache: "no-store" });
+        if (!res.ok) throw new Error("Failed to load supabase.txt");
+        const text = await res.text();
+        const map = Object.fromEntries(
+          text
+            .split(/\n+/)
+            .map((l) => l.trim())
+            .filter(Boolean)
+            .map((line) => {
+              const i = line.indexOf("=");
+              return [line.slice(0, i).trim(), line.slice(i + 1).trim()];
+            })
+        );
+        const url =
+          map["SUPABASE_URL"] ||
+          map["SUPABASE_PROJECT_URL"] ||
+          (map["SUPABASE_PROJECT_ID"]
+            ? `https://${map["SUPABASE_PROJECT_ID"]}.supabase.co`
+            : "");
+        const key =
+          map["SUPABASE_ANON_KEY"] ||
+          map["PUBLIC_ANON_KEY"] ||
+          map["SUPABASE_PUBLIC_KEY"];
+        if (!url || !key) throw new Error("Supabase URL/key missing");
+        supabaseClient = window.supabase.createClient(url, key);
+        return supabaseClient;
+      }
+
+      async function requireSession() {
+        const { data } = await supabaseClient.auth.getSession();
+        if (!data?.session) {
+          const ret = encodeURIComponent(
+            "/pages/roster.html" + location.search
+          );
+          location.assign(`/pages/auth.html?returnTo=${ret}`);
+          return null;
+        }
+        return data.session;
+      }
+
+      function getLeagueId() {
+        return (
+          (window.getCurrentLeagueId && window.getCurrentLeagueId()) ||
+          new URLSearchParams(location.search).get("league")
+        );
+      }
+
+      async function fetchLeague(leagueId) {
+        const { data, error } = await supabaseClient
+          .from("leagues")
+          .select(
+            "id, name, season:seasons(id, season_number, franchise:franchises(name))"
+          )
+          .eq("id", leagueId)
+          .maybeSingle();
+        if (error) throw error;
+        return data;
+      }
+
+      // --- Mobile notifications dropdown wiring ---
+      const mobileNotesDetails = document.getElementById("mobileNoteBtn");
+      const mobileNotesList = document.getElementById("mobileNotesList");
+      const mobileNotesBadge = document.getElementById("mobileNotesBadge");
+
+      const webNotesDetails = document.getElementById("webNoteBtn");
+      const webNotesList = document.getElementById("webNotesList");
+      const webNotesBadge = document.getElementById("webNotesBadge");
+
+      // Access the Supabase client created in the IIFE lazily
+      function getSupabase() {
+        return window.supabaseClient || null;
+      }
+
+      function fmtSince(ts) {
+        try {
+          const d = new Date(ts);
+          const diff = (Date.now() - d.getTime()) / 1000;
+          if (diff < 60) return `${Math.floor(diff)}s`;
+          if (diff < 3600) return `${Math.floor(diff / 60)}m`;
+          if (diff < 86400) return `${Math.floor(diff / 3600)}h`;
+          return `${Math.floor(diff / 86400)}d`;
+        } catch {
+          return "";
+        }
+      }
+
+      async function fetchNotifications(userId) {
+        const sb = getSupabase();
+        if (!sb) return [];
+        // Try a canonical view first; fall back gracefully if it doesn't exist
+        const candidates = [
+          {
+            table: "v_user_notifications",
+            cols: "id, title, created_at, is_read, href",
+          },
+          {
+            table: "notifications",
+            cols: "id, title, created_at, is_read, href",
+          },
+        ];
+        for (const t of candidates) {
+          try {
+            const { data, error } = await sb
+              .from(t.table)
+              .select(t.cols)
+              .eq("user_id", userId)
+              .order("created_at", { ascending: false })
+              .limit(20);
+            if (!error && data) return data;
+          } catch {}
+        }
+        return [];
+      }
+
+      function renderNotifications(rows) {
+        if (!mobileNotesList) return;
+        mobileNotesList.innerHTML = "";
+        if (!rows.length) {
+          const li = document.createElement("li");
+          li.className =
+            "text-xs text-neutral-400 px-2 py-2 rounded-lg bg-[rgba(255,255,255,0.04)]";
+          li.textContent = "No notifications";
+          mobileNotesList.appendChild(li);
+          if (mobileNotesBadge) mobileNotesBadge.classList.add("hidden");
+          return;
+        }
+        let unread = 0;
+        for (const n of rows) {
+          if (n.is_read === false) unread++;
+          const a = document.createElement("a");
+          a.className =
+            "flex items-start gap-2 px-2 py-2 rounded-lg hover:bg-[rgba(255,255,255,0.06)] text-xs";
+          a.href = n.href || "#";
+          a.innerHTML = `
+              <span class="mt-0.5"><i class="fi fi-rr-bolt"></i></span>
+              <span class="flex-1 min-w-0">
+                <span class="block text-white truncate">${
+                  n.title || "Notification"
+                }</span>
+                <span class="block text-[10px] text-neutral-300">${fmtSince(
+                  n.created_at
+                )}</span>
+              </span>
+            `;
+          const li = document.createElement("li");
+          li.appendChild(a);
+          mobileNotesList.appendChild(li);
+        }
+        if (mobileNotesBadge) {
+          if (unread > 0) {
+            mobileNotesBadge.textContent = String(unread);
+            mobileNotesBadge.classList.remove("hidden");
+          } else {
+            mobileNotesBadge.classList.add("hidden");
+          }
+        }
+      }
+
+      function renderWebNotifications(rows) {
+        if (!webNotesList) return;
+        webNotesList.innerHTML = "";
+        if (!rows.length) {
+          const li = document.createElement("li");
+          li.className =
+            "text-xs text-neutral-500 px-2 py-2 rounded-lg bg-neutral-50";
+          li.textContent = "No notifications";
+          webNotesList.appendChild(li);
+          if (webNotesBadge) webNotesBadge.classList.add("hidden");
+          return;
+        }
+        let unread = 0;
+        for (const n of rows) {
+          if (n.is_read === false) unread++;
+          const a = document.createElement("a");
+          a.className =
+            "flex items-start gap-2 px-2 py-2 rounded-lg hover:bg-neutral-50 text-xs";
+          a.href = n.href || "#";
+          a.innerHTML = `
+              <span class="mt-0.5"><i class="fi fi-rr-bolt"></i></span>
+              <span class="flex-1 min-w-0">
+                <span class="block text-neutral-900 truncate">${
+                  n.title || "Notification"
+                }</span>
+                <span class="block text-[10px] text-neutral-500">${fmtSince(
+                  n.created_at
+                )}</span>
+              </span>
+            `;
+          const li = document.createElement("li");
+          li.appendChild(a);
+          webNotesList.appendChild(li);
+        }
+        if (webNotesBadge) {
+          if (unread > 0) {
+            webNotesBadge.textContent = String(unread);
+            webNotesBadge.classList.remove("hidden");
+          } else {
+            webNotesBadge.classList.add("hidden");
+          }
+        }
+      }
+
+      async function refreshNotifications() {
+        try {
+          const sb = getSupabase();
+          if (!sb) {
+            setTimeout(refreshNotifications, 300);
+            return;
+          }
+          const { data: sess } = await sb.auth.getSession();
+          const userId = sess?.session?.user?.id;
+          if (!userId) {
+            renderNotifications([]);
+            return;
+          }
+          const rows = await fetchNotifications(userId);
+          renderNotifications(rows || []);
+          renderWebNotifications(rows || []);
+        } catch {
+          renderNotifications([]);
+        }
+      }
+
+      if (mobileNotesDetails) {
+        // Load on first open
+        let loadedOnce = false;
+        mobileNotesDetails.addEventListener("toggle", async () => {
+          if (mobileNotesDetails.open && !loadedOnce) {
+            await refreshNotifications();
+            loadedOnce = true;
+          }
+        });
+        // Also try to show a badge count shortly after page loads
+        setTimeout(refreshNotifications, 800);
+      }
+      if (webNotesDetails) {
+        let loadedOnceWeb = false;
+        webNotesDetails.addEventListener("toggle", async () => {
+          if (webNotesDetails.open && !loadedOnceWeb) {
+            await refreshNotifications();
+            loadedOnceWeb = true;
+          }
+        });
+        // Also ensure badge is primed for desktop
+        setTimeout(refreshNotifications, 900);
+      }
+    </script>
     <script src="/src/js/league-context.js"></script>
   </body>
 </html>
