--- a/pages/leagues.html
+++ b/pages/leagues.html
@@ -44,11 +44,39 @@
         >
           <a
             href="/pages/leagues.html"
-            class="md:w-55 w-full text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
+            class="md:w-55 text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
             >Draft<i
               class="fi fi-br-crown pt-1 md:text-2xl text-sm text-palepink rotate-30"
             ></i
           ></a>
+          <!--mobile notifications (dropdown) -->
+          <div class="ml-auto mr-3 md:hidden">
+            <details id="mobileNoteBtn" class="dropdown dropdown-end">
+              <summary
+                class="btn btn-ghost rounded-full hover:bg-transparent hover:shadow-none text-white aspect-square size-9 flex md:hidden items-center justify-center border-lightgray-border border-1 relative"
+              >
+                <i class="fi fi-sr-bell pt-1"></i>
+                <span
+                  id="mobileNotesBadge"
+                  class="absolute bg-palepink rounded-full min-w-4 h-4 px-1 flex items-center justify-center text-[10px] -top-1 -right-1 hidden"
+                ></span>
+              </summary>
+              <div
+                class="menu dropdown-content z-10 shadow-sm w-72 p-3 bg-lightgray rounded-xl mt-2 text-white space-y-1 font-semibold"
+              >
+                <div class="text-xs text-neutral-300 px-1 pb-1">
+                  Notifications
+                </div>
+                <ul id="mobileNotesList" class="space-y-1">
+                  <li
+                    class="text-xs text-neutral-400 px-2 py-2 rounded-lg bg-[rgba(255,255,255,0.04)]"
+                  >
+                    No notifications
+                  </li>
+                </ul>
+              </div>
+            </details>
+          </div>
           <details class="dropdown dropdown-end">
             <summary
               class="btn btn-ghost rounded-full hover:bg-transparent hover:shadow-none text-white aspect-square size-9 flex md:hidden items-center justify-center border-lightgray-border border-1"
@@ -79,7 +107,32 @@
                 <input type="text" placeholder="Search..." />
               </label>
             </div>
-            <div class="flex gap-8">
+            <div class="flex gap-4">
+              <details id="webNoteBtn" class="dropdown dropdown-end">
+                <summary
+                  class="btn btn-circle btn-ghost size-8 text-white border-1 border-lightgray-border relative"
+                >
+                  <i class="fi fi-sr-bell pt-1"></i>
+                  <span
+                    id="webNotesBadge"
+                    class="absolute -top-1 -right-1 bg-neutral-900 text-white rounded-full min-w-4 h-4 px-1 flex items-center justify-center text-[10px] hidden"
+                  ></span>
+                </summary>
+                <div
+                  class="menu dropdown-content z-10 shadow-sm w-80 p-3 bg-white text-neutral-900 rounded-xl mt-2 space-y-1 font-semibold"
+                >
+                  <div class="text-xs text-neutral-500 px-1 pb-1">
+                    Notifications
+                  </div>
+                  <ul id="webNotesList" class="space-y-1">
+                    <li
+                      class="text-xs text-neutral-500 px-2 py-2 rounded-lg bg-neutral-50"
+                    >
+                      No notifications
+                    </li>
+                  </ul>
+                </div>
+              </details>
               <a
                 class="btn btn-circle btn-ghost size-8 text-white border-1 border-lightgray-border"
                 ><i class="fi fi-sr-bell pt-1"></i>
@@ -125,7 +178,8 @@
           </a>
           <!--join-->
           <a
-            href="/pages/join-league.html"
+            id="openJoinLeagueModal"
+            href="#"
             class="group bg-neutral-900 h-full w-1/2 px-10 py-8 md:pl-14 flex flex-row items-center justify-between md:justify-start md:text-4xl text-xl font-bold"
           >
             <h1
@@ -214,6 +268,38 @@
         </div>
       </div>
     </div>
+
+    <dialog id="joinLeagueModal" class="modal">
+      <div class="modal-box rounded-3xl">
+        <h3 class="font-bold text-lg">Join a League</h3>
+        <p class="text-xs text-neutral-500 mt-1">
+          Enter the league’s join code.
+        </p>
+
+        <form id="joinLeagueForm" class="mt-4 space-y-3">
+          <label
+            class="input w-full border-1 border-neutral-200 rounded-xl h-12"
+          >
+            <i class="fi fi-rr-key pt-1 text-neutral-500"></i>
+            <input
+              type="text"
+              name="code"
+              placeholder="e.g. 8-char code"
+              required
+            />
+          </label>
+          <button
+            class="btn bg-neutral-900 text-white rounded-xl h-11 w-full"
+            type="submit"
+          >
+            <i class="fi fi-rr-check pt-[2px]"></i> Join
+          </button>
+          <p id="joinLeagueMsg" class="text-xs text-green-700 hidden"></p>
+          <p id="joinLeagueErr" class="text-xs text-red-600 hidden"></p>
+        </form>
+      </div>
+    </dialog>
+
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -319,6 +405,7 @@
           if (!url || !key)
             throw new Error("Supabase URL/key missing in supabase.txt");
           supabaseClient = window.supabase.createClient(url, key);
+          window.supabaseClient = supabaseClient;
         }
 
         async function requireSession() {
@@ -384,7 +471,269 @@
             }
           }
         })();
+
+        // --- Join League modal wiring ---
+        const openJoinLeagueModalBtn = document.getElementById(
+          "openJoinLeagueModal"
+        );
+        const joinLeagueModal = document.getElementById("joinLeagueModal");
+        const joinLeagueForm = document.getElementById("joinLeagueForm");
+        const joinLeagueMsg = document.getElementById("joinLeagueMsg");
+        const joinLeagueErr = document.getElementById("joinLeagueErr");
+
+        function jlShowMsg(t) {
+          if (joinLeagueMsg) {
+            joinLeagueMsg.textContent = t;
+            joinLeagueMsg.classList.remove("hidden");
+          }
+          if (joinLeagueErr) joinLeagueErr.classList.add("hidden");
+        }
+        function jlShowErr(t) {
+          if (joinLeagueErr) {
+            joinLeagueErr.textContent = t;
+            joinLeagueErr.classList.remove("hidden");
+          }
+          if (joinLeagueMsg) joinLeagueMsg.classList.add("hidden");
+        }
+        function jlClear() {
+          if (joinLeagueMsg) joinLeagueMsg.classList.add("hidden");
+          if (joinLeagueErr) joinLeagueErr.classList.add("hidden");
+        }
+
+        if (openJoinLeagueModalBtn && joinLeagueModal) {
+          openJoinLeagueModalBtn.addEventListener("click", (e) => {
+            e.preventDefault();
+            jlClear();
+            joinLeagueModal.showModal();
+          });
+        }
+
+        if (joinLeagueForm) {
+          joinLeagueForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            jlClear();
+            try {
+              const { data: sess } = await supabaseClient.auth.getSession();
+              if (!sess?.session) {
+                const ret = encodeURIComponent("/pages/leagues.html");
+                location.assign(`/pages/auth.html?returnTo=${ret}`);
+                return;
+              }
+              const form = new FormData(joinLeagueForm);
+              const code = String(form.get("code") || "").trim();
+              if (!code) {
+                jlShowErr("Join code is required");
+                return;
+              }
+
+              // Call RPC to join by code
+              const { data: league_id, error } = await supabaseClient.rpc(
+                "join_league_with_code",
+                { p_code: code }
+              );
+              if (error)
+                throw new Error(error.message || "Failed to join league");
+
+              jlShowMsg("Joined! Redirecting…");
+
+              // Go to Overview for that league
+              const url = new URL("/pages/overview.html", location.origin);
+              url.searchParams.set("league", league_id);
+              location.assign(url.pathname + "?" + url.searchParams.toString());
+            } catch (err) {
+              jlShowErr(err.message || "Unable to join league with that code.");
+            }
+          });
+        }
       })();
+
+      // --- Mobile notifications dropdown wiring ---
+      const mobileNotesDetails = document.getElementById("mobileNoteBtn");
+      const mobileNotesList = document.getElementById("mobileNotesList");
+      const mobileNotesBadge = document.getElementById("mobileNotesBadge");
+
+      const webNotesDetails = document.getElementById("webNoteBtn");
+      const webNotesList = document.getElementById("webNotesList");
+      const webNotesBadge = document.getElementById("webNotesBadge");
+
+      // Access the Supabase client created in the IIFE lazily
+      function getSupabase() {
+        return window.supabaseClient || null;
+      }
+
+      function fmtSince(ts) {
+        try {
+          const d = new Date(ts);
+          const diff = (Date.now() - d.getTime()) / 1000;
+          if (diff < 60) return `${Math.floor(diff)}s`;
+          if (diff < 3600) return `${Math.floor(diff / 60)}m`;
+          if (diff < 86400) return `${Math.floor(diff / 3600)}h`;
+          return `${Math.floor(diff / 86400)}d`;
+        } catch {
+          return "";
+        }
+      }
+
+      async function fetchNotifications(userId) {
+        const sb = getSupabase();
+        if (!sb) return [];
+        // Try a canonical view first; fall back gracefully if it doesn't exist
+        const candidates = [
+          {
+            table: "v_user_notifications",
+            cols: "id, title, created_at, is_read, href",
+          },
+          {
+            table: "notifications",
+            cols: "id, title, created_at, is_read, href",
+          },
+        ];
+        for (const t of candidates) {
+          try {
+            const { data, error } = await sb
+              .from(t.table)
+              .select(t.cols)
+              .eq("user_id", userId)
+              .order("created_at", { ascending: false })
+              .limit(20);
+            if (!error && data) return data;
+          } catch {}
+        }
+        return [];
+      }
+
+      function renderNotifications(rows) {
+        if (!mobileNotesList) return;
+        mobileNotesList.innerHTML = "";
+        if (!rows.length) {
+          const li = document.createElement("li");
+          li.className =
+            "text-xs text-neutral-400 px-2 py-2 rounded-lg bg-[rgba(255,255,255,0.04)]";
+          li.textContent = "No notifications";
+          mobileNotesList.appendChild(li);
+          if (mobileNotesBadge) mobileNotesBadge.classList.add("hidden");
+          return;
+        }
+        let unread = 0;
+        for (const n of rows) {
+          if (n.is_read === false) unread++;
+          const a = document.createElement("a");
+          a.className =
+            "flex items-start gap-2 px-2 py-2 rounded-lg hover:bg-[rgba(255,255,255,0.06)] text-xs";
+          a.href = n.href || "#";
+          a.innerHTML = `
+              <span class="mt-0.5"><i class="fi fi-rr-bolt"></i></span>
+              <span class="flex-1 min-w-0">
+                <span class="block text-white truncate">${
+                  n.title || "Notification"
+                }</span>
+                <span class="block text-[10px] text-neutral-300">${fmtSince(
+                  n.created_at
+                )}</span>
+              </span>
+            `;
+          const li = document.createElement("li");
+          li.appendChild(a);
+          mobileNotesList.appendChild(li);
+        }
+        if (mobileNotesBadge) {
+          if (unread > 0) {
+            mobileNotesBadge.textContent = String(unread);
+            mobileNotesBadge.classList.remove("hidden");
+          } else {
+            mobileNotesBadge.classList.add("hidden");
+          }
+        }
+      }
+
+      function renderWebNotifications(rows) {
+        if (!webNotesList) return;
+        webNotesList.innerHTML = "";
+        if (!rows.length) {
+          const li = document.createElement("li");
+          li.className =
+            "text-xs text-neutral-500 px-2 py-2 rounded-lg bg-neutral-50";
+          li.textContent = "No notifications";
+          webNotesList.appendChild(li);
+          if (webNotesBadge) webNotesBadge.classList.add("hidden");
+          return;
+        }
+        let unread = 0;
+        for (const n of rows) {
+          if (n.is_read === false) unread++;
+          const a = document.createElement("a");
+          a.className =
+            "flex items-start gap-2 px-2 py-2 rounded-lg hover:bg-neutral-50 text-xs";
+          a.href = n.href || "#";
+          a.innerHTML = `
+              <span class="mt-0.5"><i class="fi fi-rr-bolt"></i></span>
+              <span class="flex-1 min-w-0">
+                <span class="block text-neutral-900 truncate">${
+                  n.title || "Notification"
+                }</span>
+                <span class="block text-[10px] text-neutral-500">${fmtSince(
+                  n.created_at
+                )}</span>
+              </span>
+            `;
+          const li = document.createElement("li");
+          li.appendChild(a);
+          webNotesList.appendChild(li);
+        }
+        if (webNotesBadge) {
+          if (unread > 0) {
+            webNotesBadge.textContent = String(unread);
+            webNotesBadge.classList.remove("hidden");
+          } else {
+            webNotesBadge.classList.add("hidden");
+          }
+        }
+      }
+
+      async function refreshNotifications() {
+        try {
+          const sb = getSupabase();
+          if (!sb) {
+            setTimeout(refreshNotifications, 300);
+            return;
+          }
+          const { data: sess } = await sb.auth.getSession();
+          const userId = sess?.session?.user?.id;
+          if (!userId) {
+            renderNotifications([]);
+            return;
+          }
+          const rows = await fetchNotifications(userId);
+          renderNotifications(rows || []);
+          renderWebNotifications(rows || []);
+        } catch {
+          renderNotifications([]);
+        }
+      }
+
+      if (mobileNotesDetails) {
+        // Load on first open
+        let loadedOnce = false;
+        mobileNotesDetails.addEventListener("toggle", async () => {
+          if (mobileNotesDetails.open && !loadedOnce) {
+            await refreshNotifications();
+            loadedOnce = true;
+          }
+        });
+        // Also try to show a badge count shortly after page loads
+        setTimeout(refreshNotifications, 800);
+      }
+      if (webNotesDetails) {
+        let loadedOnceWeb = false;
+        webNotesDetails.addEventListener("toggle", async () => {
+          if (webNotesDetails.open && !loadedOnceWeb) {
+            await refreshNotifications();
+            loadedOnceWeb = true;
+          }
+        });
+        // Also ensure badge is primed for desktop
+        setTimeout(refreshNotifications, 900);
+      }
     </script>
   </body>
 </html>
