--- a/pages/overview.html
+++ b/pages/overview.html
@@ -44,13 +44,13 @@
         >
           <a
             href="/pages/leagues.html"
-            class="md:w-55 w-full text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
+            class="md:w-55 text-transparent bg-clip-text bg-linear-to-b from-white to-zinc-200 flex flex-row items-center md:text-4xl text-2xl font-calsans gap-1 md:justify-center h-full"
             >Draft<i
               class="fi fi-br-crown pt-1 md:text-2xl text-sm text-palepink rotate-30"
             ></i
           ></a>
           <!--mobile notifications (dropdown) -->
-          <div class="mr-4">
+          <div class="ml-auto mr-3 md:hidden">
             <details id="mobileNoteBtn" class="dropdown dropdown-end">
               <summary
                 class="btn btn-ghost rounded-full hover:bg-transparent hover:shadow-none text-white aspect-square size-9 flex md:hidden items-center justify-center border-lightgray-border border-1 relative"
